# allan_variance_ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
.devcontainer/: Dockerfile.devcontainer  README.md  devcontainer.json  docker-compose.devcontainer.yaml  setup_base_env.sh  setup_container.sh
bags/: .gitkeep
config/: alphasense.yaml  anymal_b.yaml  anymal_c.yaml  boxy.yaml  coyote.yaml  imu.yaml  ouster.yaml  realsense_d425i.yaml  realsense_t265.yaml  rooster_ouster.yaml  rooster_realsense.yaml  sim.yaml
config/simulation/: imu_simulator.yaml
docker/: Dockerfile  docker-compose.yml
include/allan_variance_ros/: AllanVarianceComputor.hpp  ImuMeasurement.hpp  yaml_parsers.hpp
launch/: record.launch
scripts/: analysis.py  cookbag.py
src/: AllanVarianceComputor.cpp  ImuMeasurement.cpp  ImuSimulator.cpp  allan_variance.cpp  cookbag.cpp  yaml_parsers.cpp
