<?xml version="1.0"?>
<package format="2">
  <name>allan_variance_ros</name>
  <version>0.0.1</version>
  <description>
     Allan Variance ROS
  </description>
  
  <author email="russell@robots.ox.ac.uk">Russell Buchanan</author>

  <maintainer email="russell@robots.ox.ac.uk">Russell Buchanan</maintainer>

  <license>Proprietary</license>

  <url type="repository">https://github.com/ori-drs/kins</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>sensor_msgs</depend>
  <depend>rospy</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rosbag</depend>
  <depend>yaml-cpp</depend>

</package>

